fixed dolor not being visible

--- a/src/style.css
+++ b/src/style.css
@@ -40,6 +40,7 @@
   background-color: #95ffcd;
   text-align:center;
 }
-strong {
+/*strong {
   background-color: black;
 }
+*/
